# SO100-RL-VLA

./: README.md  environment.yml  pyproject.toml
.claude/: settings.json
config/: manual_so100.json  train_so100_sim.json
scripts/: SAC_train  calibrate.py  maunual
src/cameras/: __init__.py  camera.py  camera_config.py
src/cameras/opencv/: __init__.py  opencv_camera.py  opencv_camera_config.py
src/cameras/realsense/: realsense_camera_config.py
src/motors/: motors_bus.py
src/processor/: __init__.py
src/project/cameras/: __init__.py  utils.py
src/project/configs/: default.py  parser.py  policies.py  train.py
src/project/datasets/: compute_stats.py  factory.py  lerobot_dataset.py  streaming_dataset.py  utils.py
src/project/envs/: configs.py  utils.py
src/project/motors/: __init__.py
src/project/optim/: factory.py  optimizers.py  schedulers.py
src/project/policies/: __init__.py  factory.py  pretrained.py  utils.py
src/project/processor/: __init__.py  batch_processor.py  converters.py  core.py  delta_action_processor.py  device_processor.py  gym_action_processor.py  hil_processor.py  normalize_processor.py  observation_processor.py  pipeline.py  policy_robot_bridge.py  rename_processor.py  tokenizer_processor.py
src/project/rl/: actor.py  buffer.py  gym_manipulator.py  joint_observations_processor.py  learner.py  learner_service.py  wandb_utils.py
src/project/robots/: robot.py  robot_config.py  utils.py
src/robots/: __init__.py  robot.py
src/teleoperators/: __init__.py  teleoperator.py  teleoperator_config.py  utils.py
src/utils/: constans.py  decorators.py  errors.py  import_utils.py
(+77 files in other folders)
