[tool.poetry]
name = "so100-rl-vla"
version = "0.1.0"
description = "Sim-Real: Training a Robotic Arm VLA Model Using Reinforcement Learning"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "project", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
torch = ">=2.0.0"
torchvision = ">=0.15.0"
torchaudio = ">=2.0.0"
einops = ">=0.6.0"
numpy = ">=1.24.0"
scipy = ">=1.10.0"
opencv-python-headless = ">=4.8.0"
protobuf = ">=4.24.0"
grpcio = ">=1.59.0"
grpcio-tools = ">=1.59.0"
wandb = ">=0.15.0"
gym = ">=0.26.0"
gymnasium = ">=0.29.0"
mujoco = ">=2.3.3"
mujoco-py = ">=2.1.2"
transformers = ">=4.35.0"
datasets = ">=2.14.0"
peft = ">=0.7.0"
accelerate = ">=0.24.0"
omegaconf = ">=2.3.0"
hydra-core = ">=1.3.0"
psutil = ">=5.9.0"
pillow = ">=10.0.0"
pyyaml = ">=6.0.0"
tqdm = ">=4.66.0"
scikit-image = ">=0.22.0"
scikit-learn = ">=1.3.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
black = ">=23.10.0"
isort = ">=5.12.0"
flake8 = ">=6.1.0"
mypy = ">=1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
